--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -6,8 +6,9 @@
 # i -> ignore mods, will ignore modifiers.
 
 $terminal = alacritty
+$runner = wofi -a
+$browser = firefox
 $fileManager = $terminal -e joshuto
-$menu = wofi -a
 $screenshot = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG
 
 $mod  = SUPER
@@ -15,36 +16,50 @@ $mods = SUPER_SHIFT
 $modc = SUPER_CTRL
 $moda = SUPER_ALT
 
-$night_on  = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 3000
-$night_off = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 5000
-$dimm_on   = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 0.5
-$dimm_off  = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 1
+$bctl = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay
+
+$night_top  = $bctl Temperature q 3000
+$night_mid  = $bctl Temperature q 4000
+$night_low  = $bctl Temperature q 5000
+$bright_top = $bctl Brightness d 1
+$bright_mid = $bctl Brightness d 0.5
+$bright_low = $bctl Brightness d 0.25
+
+exec-once = $night_mid
+exec-once = $bright_top
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $modc, Q, exit
-bind = $mod,  RETURN, exec, $terminal
-bind = $mod,  W, killactive, 
-bind = $mod,  E, exec, $fileManager
-bind = $mod,  T, togglefloating, 
-bind = $mod,  R, exec, $menu
-bind = $mod,  G, pseudo, # dwindle
-bind = $mod,  F, fullscreen
-bind = $mod,  Tab, fullscreen, 1 
-bind = $modc, R, exec, killall waybar
-bind = $mods, R, exec, waybar
-bind = $mods, S, exec, $screenshot
-bind = $mod,  B, exec, $dimm_on
-bind = $mods, B, exec, $dimm_off
-bind = $mod,  N, exec, $night_on
-bind = $mods, N, exec, $night_off
 
-bind = ALT, Tab, cyclenext,
-bind = ALT, Tab, bringactivetotop,
+# Programs
+bind = $mod,  RETURN, exec, $terminal
+bind = $mod,  R,      exec, $runner
+bind = $mod,  E,      exec, $fileManager
+bind = $mod,  I,      exec, $browser
+bind = $mods, S,      exec, $screenshot
 
 # pyprland
 bind = $mod, V, exec, pypr toggle volume
 bind = $mod, P, exec, pypr toggle password
 bind = $mod, M, exec, pypr toggle music
+
+# Actions
+bind = $modc, Q, exit
+bind = $mod,  W, killactive,
+bind = $mod,  T, togglefloating, 
+bind = $mod,  G, pseudo,
+bind = $mod,  F, fullscreen
+bind = $mod,  Tab, fullscreen, 1 
+bind = $modc, R, exec, killall waybar && waybar
+bind = ALT, Tab, cyclenext,
+bind = ALT, Tab, bringactivetotop,
+
+# Controls
+bind = $modc, B, exec, $bright_low
+bind = $mod,  B, exec, $bright_mid
+bind = $mods, B, exec, $bright_top
+bind = $modc, N, exec, $night_top
+bind = $mod,  N, exec, $night_mid
+bind = $mods, N, exec, $night_low
 
 # Move focus with mod + vim motions
 bind = $mod, h, movefocus, l
@@ -75,6 +90,7 @@ bind = $mod, 6, workspace, 6
 bind = $mod, 7, workspace, 7
 bind = $mod, 8, workspace, 8
 bind = $mod, 9, workspace, 9
+bind = $mod, 0,workspace, 10
 
 # Move active window to a workspace with mod + SHIFT + [0-9]
 bind = $mods, 1, movetoworkspace, 1
@@ -86,6 +102,7 @@ bind = $mods, 6, movetoworkspace, 6
 bind = $mods, 7, movetoworkspace, 7
 bind = $mods, 8, movetoworkspace, 8
 bind = $mods, 9, movetoworkspace, 9
+bind = $mods, 0, movetoworkspace, 10
 
 # Move/resize windows with mod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
