--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -7,6 +7,11 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+windowrulev2 = rounding 0,class:^(org.freedesktop.Xwayland)$
+windowrulev2 = noanim,class:^(org.freedesktop.Xwayland)$
+windowrulev2 = noblur,class:^(org.freedesktop.Xwayland)$
+windowrulev2 = opaque,class:^(org.freedesktop.Xwayland)$
+windowrulev2 = noborder,class:^(org.freedesktop.Xwayland)$
 windowrulev2 = rounding 0,class:^(osu!.exe)$
 windowrulev2 = noanim,class:^(osu!.exe)$
 windowrulev2 = pseudo,class:^(osu!.exe)$
