--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -6,22 +6,22 @@
 # layerrule = blur,notifications
 
 general {
-    gaps_in = 2
-    gaps_out = 4
+    gaps_in = 0
+    gaps_out = 0
     border_size = 2
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border = rgba(fd0d7aff) rgba(f89e07ff) 45deg
-    # col.active_border = rgba(cd1f48ff)
     col.inactive_border = rgba(323437ff)
+    # col.active_border = rgba(cd1f48ff)
     layout = dwindle
-    allow_tearing = false
+    allow_tearing = true
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 decoration {
-    rounding = 8
+    rounding = 0
     blur {
-        enabled = true
+        enabled = false
         size = 4
         passes = 1
     }
