--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,10 +1,13 @@
 $img = ~/dotfiles/wallpapers/leaf.jpg
-preload = $img
+$img2 = ~/dotfiles/wallpapers/damascus.png
 
-wallpaper = DP-1,     $img
-wallpaper = DP-2,     $img
-wallpaper = DP-3,     $img
-wallpaper = HDMI-A-1, $img
+$selected = $img
+preload = $selected
+
+wallpaper = DP-1,     $selected
+wallpaper = DP-2,     $selected
+wallpaper = DP-3,     $selected
+wallpaper = HDMI-A-1, $selected
 
 splash = false
 ipc = on
