--- a/config/hypr/hyprland/displays.conf
+++ b/config/hypr/hyprland/displays.conf
@@ -1,10 +1,16 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 #           n, rules
-workspace = 1, monitor:DP-1,     default:true
-workspace = 2, monitor:DP-2,     default:true
-workspace = 3, monitor:DP-3,     default:true
-workspace = 6, monitor:HDMI-A-1, default:true
+workspace = 1, monitor:DP-1,     persistent:true, default:true
+workspace = 2, monitor:DP-2,     persistent:true   
+workspace = 3, monitor:DP-3,     persistent:true   
+workspace = 4, monitor:DP-1,     persistent:true
+workspace = 5, monitor:DP-2,     persistent:true   
+workspace = 6, monitor:DP-3,     persistent:true   
+workspace = 7, monitor:DP-1,     persistent:true
+workspace = 8, monitor:DP-2,     persistent:true   
+workspace = 9, monitor:DP-3,     persistent:true   
+workspace = 10,monitor:HDMI-A-1, persistent:true
 
 
 #       name,     WxH@Hz,        position, scale
