--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -68,10 +68,10 @@ bind = $mod, k, movefocus, u
 bind = $mod, l, movefocus, r
 
 # Move windows with mod + SHIFT + vim motions
-binde = $mods, h, movewindow, l
-binde = $mods, j, movewindow, d
-binde = $mods, k, movewindow, u
-binde = $mods, l, movewindow, r
+bind = $mods, h, movewindow, l
+bind = $mods, j, movewindow, d
+bind = $mods, k, movewindow, u
+bind = $mods, l, movewindow, r
 
 # Resize windows with mod + CTRL + vim motions
 $resize_step = 40
