--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -21,7 +21,7 @@ general {
 decoration {
     rounding = 0
     blur {
-        enabled = false
+        enabled = true
         size = 4
         passes = 1
     }
@@ -35,13 +35,13 @@ decoration {
 animations {
     enabled = yes
     bezier = custom, 0.45, 0.05, 0.55, 0.95
-    animation = windowsIn,  1, 1.8, custom
-    animation = windowsOut, 1, 1.8, custom
-    animation = windowsMove,1, 1.8, default
-    animation = fade,       1, 1.8, custom
-    animation = workspaces, 1, 1.8, custom
-    animation = border,     1, 1.8, custom
-    animation = borderangle,1, 1.8, custom
+    animation = windowsIn,   1, 1.8, custom
+    animation = windowsOut,  1, 1.8, custom
+    animation = windowsMove, 1, 1.8, default
+    animation = fade,        1, 1.8, custom
+    animation = workspaces,  1, 1.8, custom
+    animation = border,      1, 1.8, custom
+    animation = borderangle, 1, 1.8, custom
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
