--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -11,8 +11,8 @@ env = ICON_TEME,Colloid-dark
 env = GTK_THEME,adw-gtk3-dark
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
-# env = SDL_VIDEODRIVER,wayland
-env = GDK_BACKEND,wayland,x11
+env = SDL_VIDEODRIVER,x11
+env = GDK_BACKEND,wayland,x11,*
 env = CLUTTER_BACKEND,wayland
 
 # XDG
@@ -22,7 +22,7 @@ env = XDG_SESSION_TYPE,wayland
 
 # Qt
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_QPA_PLATFORM,wayland;x11
+env = QT_QPA_PLATFORM,wayland;xcb
 # env = QT_QPA_PLATFORM,xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
@@ -32,7 +32,6 @@ env = __GL_VRR_ALLOWED,1
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
 env = LIBVA_DRIVER_NAME,nvidia
-env = WLR_DRM_NO_ATOMIC,1
 
 # Others
 env = _JAVA_AWT_WM_NONREPARENTING,1
