--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -7,14 +7,10 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
-windowrulev2 = rounding 0,class:^(org.freedesktop.Xwayland)$
 windowrulev2 = noanim,class:^(org.freedesktop.Xwayland)$
 windowrulev2 = noblur,class:^(org.freedesktop.Xwayland)$
 windowrulev2 = opaque,class:^(org.freedesktop.Xwayland)$
-windowrulev2 = noborder,class:^(org.freedesktop.Xwayland)$
-windowrulev2 = rounding 0,class:^(osu!.exe)$
 windowrulev2 = noanim,class:^(osu!.exe)$
-windowrulev2 = pseudo,class:^(osu!.exe)$
 windowrulev2 = noblur,class:^(osu!.exe)$
 windowrulev2 = opaque,class:^(osu!.exe)$
 
@@ -26,11 +22,11 @@ xwayland {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 misc {
     force_default_wallpaper = 0
-    disable_hyprland_logo=true
-    disable_splash_rendering=true
-    animate_manual_resizes=true
-    no_direct_scanout=false
-    vfr = false
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+    animate_manual_resizes = true
+    no_direct_scanout = false
+    vfr = true
     vrr = 1
 }
 
