--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,8 +1,12 @@
-$img = ~/dotfiles/wallpapers/leaf.jpg
-$img2 = ~/dotfiles/wallpapers/damascus.png
+$img1 = ~/dotfiles/wallpapers/leaf.jpg
+$img2 = ~/dotfiles/wallpapers/black.png
+$img3 = ~/dotfiles/wallpapers/field.jpg
 
-$selected = $img
-preload = $selected
+preload = $img1
+preload = $img2
+preload = $img3
+
+$selected = $img1
 
 wallpaper = DP-1,     $selected
 wallpaper = DP-2,     $selected
