--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -7,7 +7,7 @@
 
 $terminal = alacritty
 $runner = wofi -a
-$browser = firefox
+$browser = flatpak run org.mozilla.firefox
 $fileManager = $terminal -e joshuto
 $screenshot = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG
 
@@ -28,6 +28,42 @@ $bright_low = $bctl Brightness d 0.25
 exec-once = $night_mid
 exec-once = $bright_top
 
+$w1 = ~/dotfiles/wallpapers/leaf.jpg
+$w2 = ~/dotfiles/wallpapers/black.png
+$w3 = ~/dotfiles/wallpapers/field.jpg
+
+$set_wp = hyprctl hyprpaper wallpaper
+
+$set_w1_d1 = $set_wp "DP-1,$w1" 
+$set_w1_d2 = $set_wp "DP-2,$w1"
+$set_w1_d3 = $set_wp "DP-3,$w1"
+$set_w1_d4 = $set_wp "HDMI-A-1,$w1"
+
+$set_w2_d1 = $set_wp "DP-1,$w2" 
+$set_w2_d2 = $set_wp "DP-2,$w2"
+$set_w2_d3 = $set_wp "DP-3,$w2"
+$set_w2_d4 = $set_wp "HDMI-A-1,$w2"
+
+$set_w3_d1 = $set_wp "DP-1,$w3" 
+$set_w3_d2 = $set_wp "DP-2,$w3"
+$set_w3_d3 = $set_wp "DP-3,$w3"
+$set_w3_d4 = $set_wp "HDMI-A-1,$w3"
+
+bind = $mod,  m, exec, $set_w1_d1
+bind = $mod,  m, exec, $set_w1_d2
+bind = $mod,  m, exec, $set_w1_d3
+bind = $mod,  m, exec, $set_w1_d4
+
+bind = $modc, m, exec, $set_w2_d1
+bind = $modc, m, exec, $set_w2_d2
+bind = $modc, m, exec, $set_w2_d3
+bind = $modc, m, exec, $set_w2_d4
+
+bind = $mods, m, exec, $set_w3_d1
+bind = $mods, m, exec, $set_w3_d2
+bind = $mods, m, exec, $set_w3_d3
+bind = $mods, m, exec, $set_w3_d4
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
 # Programs
@@ -40,7 +76,7 @@ bind = $mods, S,      exec, $screenshot
 # pyprland
 bind = $mod, V, exec, pypr toggle volume
 bind = $mod, P, exec, pypr toggle password
-bind = $mod, M, exec, pypr toggle music
+bind = $mod, S, exec, pypr toggle spotify
 
 # Actions
 bind = $modc, Q, exit
