--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -8,10 +8,16 @@
 general {
     gaps_in = 0
     gaps_out = 0
-    border_size = 2
-    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border = rgba(fd0d7aff) rgba(f89e07ff) 45deg
-    col.inactive_border = rgba(323437ff)
+    border_size = 1
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg # default
+    # col.active_border = rgba(fd0d7aff) rgba(f89e07ff) 45deg # red gradient
+    # col.active_border = rgba(e30d6cff) rgba(ff8718ff) 45deg # firefox
+    col.active_border = rgba(919191ff) # gray
+    # col.active_border = rgba(f1f1f1ff) # white
+    # col.active_border = rgba(d71921ff) # nothing red
+    # col.active_border = rgba(fa709aff) rgba(fee140ff) 45deg # pastel red
+    # col.active_border = rgba(37ecbaff) rgba(72afd3ff) 45deg # blue
+    col.inactive_border = rgba(343434ff)
     # col.active_border = rgba(cd1f48ff)
     layout = dwindle
     allow_tearing = true
@@ -46,8 +52,12 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = yes
-    preserve_split = yes
+    pseudotile = true
+    preserve_split = true
+    permanent_direction_override = true
+    smart_split = false
+    smart_resizing = true
+    no_gaps_when_only = 1
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
