--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -49,20 +49,20 @@ $set_w3_d2 = $set_wp "DP-2,$w3"
 $set_w3_d3 = $set_wp "DP-3,$w3"
 $set_w3_d4 = $set_wp "HDMI-A-1,$w3"
 
-bind = $mod,  m, exec, $set_w1_d1
-bind = $mod,  m, exec, $set_w1_d2
-bind = $mod,  m, exec, $set_w1_d3
-bind = $mod,  m, exec, $set_w1_d4
+bind = $mod,  c, exec, $set_w1_d1
+bind = $mod,  c, exec, $set_w1_d2
+bind = $mod,  c, exec, $set_w1_d3
+bind = $mod,  c, exec, $set_w1_d4
 
-bind = $modc, m, exec, $set_w2_d1
-bind = $modc, m, exec, $set_w2_d2
-bind = $modc, m, exec, $set_w2_d3
-bind = $modc, m, exec, $set_w2_d4
+bind = $modc, c, exec, $set_w2_d1
+bind = $modc, c, exec, $set_w2_d2
+bind = $modc, c, exec, $set_w2_d3
+bind = $modc, c, exec, $set_w2_d4
 
-bind = $mods, m, exec, $set_w3_d1
-bind = $mods, m, exec, $set_w3_d2
-bind = $mods, m, exec, $set_w3_d3
-bind = $mods, m, exec, $set_w3_d4
+bind = $mods, c, exec, $set_w3_d1
+bind = $mods, c, exec, $set_w3_d2
+bind = $mods, c, exec, $set_w3_d3
+bind = $mods, c, exec, $set_w3_d4
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
@@ -76,7 +76,7 @@ bind = $mods, S,      exec, $screenshot
 # pyprland
 bind = $mod, V, exec, pypr toggle volume
 bind = $mod, P, exec, pypr toggle password
-bind = $mod, S, exec, pypr toggle spotify
+bind = $mod, M, exec, pypr toggle spotify
 
 # Actions
 bind = $modc, Q, exit
