--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -28,41 +28,41 @@ $bright_low = $bctl Brightness d 0.25
 exec-once = $night_mid
 exec-once = $bright_top
 
-$w1 = ~/dotfiles/wallpapers/leaf.jpg
-$w2 = ~/dotfiles/wallpapers/black.png
-$w3 = ~/dotfiles/wallpapers/field.jpg
+$img1 = ~/dotfiles/wallpapers/leaves_red.jpg
+$img2 = ~/dotfiles/wallpapers/leaves_dark.jpg
+$img3 = ~/dotfiles/wallpapers/black.png
 
 $set_wp = hyprctl hyprpaper wallpaper
 
-$set_w1_d1 = $set_wp "DP-1,$w1" 
-$set_w1_d2 = $set_wp "DP-2,$w1"
-$set_w1_d3 = $set_wp "DP-3,$w1"
-$set_w1_d4 = $set_wp "HDMI-A-1,$w1"
+$set_w1_d1 = $set_wp "DP-1, $img1" 
+$set_w1_d2 = $set_wp "DP-2, $img1"
+$set_w1_d3 = $set_wp "DP-3, $img1"
+$set_w1_d4 = $set_wp "HDMI-A-1, $img1"
 
-$set_w2_d1 = $set_wp "DP-1,$w2" 
-$set_w2_d2 = $set_wp "DP-2,$w2"
-$set_w2_d3 = $set_wp "DP-3,$w2"
-$set_w2_d4 = $set_wp "HDMI-A-1,$w2"
+$set_w2_d1 = $set_wp "DP-1, $img2" 
+$set_w2_d2 = $set_wp "DP-2, $img2"
+$set_w2_d3 = $set_wp "DP-3, $img2"
+$set_w2_d4 = $set_wp "HDMI-A-1, $2"
 
-$set_w3_d1 = $set_wp "DP-1,$w3" 
-$set_w3_d2 = $set_wp "DP-2,$w3"
-$set_w3_d3 = $set_wp "DP-3,$w3"
-$set_w3_d4 = $set_wp "HDMI-A-1,$w3"
+$set_w3_d1 = $set_wp "DP-1, $img3" 
+$set_w3_d2 = $set_wp "DP-2, $img3"
+$set_w3_d3 = $set_wp "DP-3, $img3"
+$set_w3_d4 = $set_wp "HDMI-A-1, $img3"
 
-bind = $mod,  c, exec, $set_w1_d1
-bind = $mod,  c, exec, $set_w1_d2
-bind = $mod,  c, exec, $set_w1_d3
-bind = $mod,  c, exec, $set_w1_d4
+bind = $mod,  X, exec, $set_w1_d1
+bind = $mod,  X, exec, $set_w1_d2
+bind = $mod,  X, exec, $set_w1_d3
+bind = $mod,  X, exec, $set_w1_d4
 
-bind = $modc, c, exec, $set_w2_d1
-bind = $modc, c, exec, $set_w2_d2
-bind = $modc, c, exec, $set_w2_d3
-bind = $modc, c, exec, $set_w2_d4
+bind = $modc, X, exec, $set_w2_d1
+bind = $modc, X, exec, $set_w2_d2
+bind = $modc, X, exec, $set_w2_d3
+bind = $modc, X, exec, $set_w2_d4
 
-bind = $mods, c, exec, $set_w3_d1
-bind = $mods, c, exec, $set_w3_d2
-bind = $mods, c, exec, $set_w3_d3
-bind = $mods, c, exec, $set_w3_d4
+bind = $mods, X, exec, $set_w3_d1
+bind = $mods, X, exec, $set_w3_d2
+bind = $mods, X, exec, $set_w3_d3
+bind = $mods, X, exec, $set_w3_d4
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
