--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -6,13 +6,13 @@
 # layerrule = blur,notifications
 
 general {
-    gaps_in = 0
-    gaps_out = 0
-    border_size = 1
+    gaps_in = 4
+    gaps_out = 8
+    border_size = 2
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg # default
-    # col.active_border = rgba(fd0d7aff) rgba(f89e07ff) 45deg # red gradient
+    col.active_border = rgba(fd0d7aff) rgba(f89e07ff) 45deg # red gradient
     # col.active_border = rgba(e30d6cff) rgba(ff8718ff) 45deg # firefox
-    col.active_border = rgba(919191ff) # gray
+    # col.active_border = rgba(919191ff) # gray
     # col.active_border = rgba(f1f1f1ff) # white
     # col.active_border = rgba(d71921ff) # nothing red
     # col.active_border = rgba(fa709aff) rgba(fee140ff) 45deg # pastel red
@@ -25,7 +25,7 @@ general {
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 decoration {
-    rounding = 0
+    rounding = 8
     blur {
         enabled = true
         size = 4
