--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -3,7 +3,7 @@
 # env = WLR_RENDERER_ALLOW_SOFTWARE,1
 
 # Hyprland
-env = HYPRCURSOR_THEME,Bibata-Modern-Classic
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,24
 
 # Theme
@@ -28,18 +28,32 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
 # Electron
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = ELECTRON_TRASH,trash-cli
+
+env = XDG_SESSION_TYPE,wayland
 
 # Nvidia
-env = XDG_SESSION_TYPE,wayland
 env = NVD_BACKEND,direct
+
 env = LIBVA_DRIVER_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = __GL_GSYNC_ALLOWED,1
+env = EGL_PLATFORM,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = MOZ_ENABLE_WAYLAND,1
+env = MOZ_WAYLAND_USE_VAAPI,1
+env = MOZ_DBUS_REMOTE,1
+env = MOZ_ACCELERATED,1
+env = MOZ_WEBRENDERER,1
+env = MOZ_DISABLE_RDD_SANDBOX,1
+env = _JAVA_AWT_WM_NONREPARENTING,1
+env = WLR_USE_LIBINPUT,1
+env = WLR_DRM_NO_ATOMIC,1
 env = __GL_VRR_ALLOWED,1
+env = __GL_GSYNC_ALLOWED,1
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 opengl {
-    nvidia_anti_flicker = true
+    nvidia_anti_flicker = false
     force_introspection = 0
 }
 
