--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -6,9 +6,9 @@
 # i -> ignore mods, will ignore modifiers.
 
 $terminal = alacritty
-#$runner = wofi -a
-$runner = tofi-drun --drun-launch=true
-$browser = flatpak run org.mozilla.firefox
+$runner = wofi -a
+#$runner = tofi-drun --drun-launch=true
+$browser = flatpak run io.gitlab.librewolf-community
 $fileManager = $terminal -e joshuto
 $screenshot = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG
 
