--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -1,3 +1,5 @@
+layerrule    = noanim, wofi
+layerrule    = blur, wofi
 layerrule    = noanim, launcher
 windowrulev2 = suppressevent maximize, class:.*
 
