--- a/config/waypaper/config.ini
+++ b/config/waypaper/config.ini
@@ -12,6 +12,6 @@ swww_transition_type = any
 swww_transition_step = 90
 swww_transition_angle = 0
 swww_transition_duration = 2
-wallpaper = /home/m4rti/Pictures/wallpapers/leaves_purple.png
+wallpaper = /home/m4rti/Pictures/wallpapers/leaves_dark.jpg
 show_hidden = False
 
