--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -37,6 +37,10 @@ bind = $mods, N, exec, $night_low
 bind = $mods, D, exec, hyprctl keyword monitor HDMI-A-1,1920x1080@60,0x420,1
 bind = $modc, D, exec, hyprctl keyword monitor disabled
 
+bind = $mod, X, exec, hyprctl hyprpaper wallpaper ",~/dotfiles/wallpapers/leaves_purple.png"
+bind = $mods, X, exec, hyprctl hyprpaper wallpaper ",~/dotfiles/wallpapers/leaves_red.jpg"
+bind = $modc, X, exec, hyprctl hyprpaper wallpaper ",~/dotfiles/wallpapers/leaves_dark.jpg"
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
 # Programs
