--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -4,6 +4,7 @@
 # layerrule = blur,waybar
 # layerrule = blur,wofi
 # layerrule = blur,notifications
+exec = hyprctl setcursor Bibata-Modern-Ice 24
 
 general {
     gaps_in = 0
