--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,14 +1,14 @@
-$img1 = ~/dotfiles/wallpapers/cat_leaves.png
+$img1 = ~/dotfiles/wallpapers/leaves_green.jpg
 $img2 = ~/dotfiles/wallpapers/leaves_dark.jpg
-$img3 = ~/dotfiles/wallpapers/black.png
+$img3 = ~/dotfiles/wallpapers/leaves_red.jpg
+$img4 = ~/dotfiles/wallpapers/leaves_purple.png
 
 preload = $img1
 preload = $img2
 preload = $img3
+preload = $img4
 
-$selected = $img1
-
-wallpaper = ,$selected
+wallpaper = ,$img4
 
 splash = false
 ipc = on
