--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=adw-gtk3-dark
+gtk-theme-name=adw-gtk3-dark.bak
 gtk-icon-theme-name=Colloid-dark
 gtk-font-name=SF Pro weight=590 11
 gtk-cursor-theme-name=Bibata-Modern-Ice
