--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -6,6 +6,7 @@
 
 # Theme
 env = QT_QPA_PLATFORMTHEME,qt5ct
+env = XCURSOR_THEME,Bibata-Modern-Ice
 
 env = SDL_VIDEODRIVER,xcb
 env = GDK_BACKEND,wayland,x11,*
