--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -1,8 +1,13 @@
 layerrule    = noanim, wofi
 layerrule    = blur, wofi
+layerrule    = blur, waybar
 layerrule    = noanim, launcher
 windowrulev2 = suppressevent maximize, class:.*
 
+# Replace File window
+windowrulev2 = float,title:^(Confirm File Replacing)$
+
+# Xwayland
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
@@ -11,6 +16,7 @@ windowrulev2 = noanim,class:^(org.freedesktop.Xwayland)$
 windowrulev2 = noblur,class:^(org.freedesktop.Xwayland)$
 windowrulev2 = opaque,class:^(org.freedesktop.Xwayland)$
 
+# osu!
 windowrulev2 = noanim,class:^(osu!.exe)$
 windowrulev2 = noblur,class:^(osu!.exe)$
 windowrulev2 = opaque,class:^(osu!.exe)$
