--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -1,7 +1,7 @@
 exec-once = wl-gammarelay-rs
 exec-once = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 5000
-exec-once = hyprpaper
-# exec-once = waypaper --restore
+# exec-once = hyprpaper
+exec-once = waypaper --restore
 exec-once = waybar
 exec-once = pypr
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
@@ -9,3 +9,4 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = otd-daemon
+exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
