--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -8,7 +8,7 @@
 $terminal = alacritty
 $runner = wofi -a
 #$runner = tofi-drun --drun-launch=true
-$browser = flatpak run io.gitlab.librewolf-community
+$browser = brave # --enable-features=UseOzonePlatform --ozone-platform=wayland
 $fileManager = $terminal -e joshuto
 $screenshot = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG
 
@@ -37,9 +37,9 @@ bind = $mods, N, exec, $night_low
 bind = $mods, D, exec, hyprctl keyword monitor HDMI-A-1,1920x1080@60,0x420,1
 bind = $modc, D, exec, hyprctl keyword monitor disabled
 
-bind = $mod, X, exec, hyprctl hyprpaper wallpaper ",~/dotfiles/wallpapers/leaves_purple.png"
-bind = $mods, X, exec, hyprctl hyprpaper wallpaper ",~/dotfiles/wallpapers/leaves_red.jpg"
-bind = $modc, X, exec, hyprctl hyprpaper wallpaper ",~/dotfiles/wallpapers/leaves_dark.jpg"
+# bind = $mod, X, exec, hyprctl hyprpaper wallpaper ",~/dotfiles/wallpapers/leaves_purple.png"
+# bind = $mods, X, exec, hyprctl hyprpaper wallpaper ",~/dotfiles/wallpapers/leaves_red.jpg"
+# bind = $modc, X, exec, hyprctl hyprpaper wallpaper ",~/dotfiles/wallpapers/leaves_dark.jpg"
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
