--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -4,6 +4,8 @@ set -ga terminal-overrides ',xterm-256color:Tc'
 set -g mouse on
 set -sg escape-time 10
 
+setw -g mode-keys vi
+
 unbind %
 bind v split-window -h
 unbind '"'
