--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -33,15 +33,24 @@ decoration {
 
 # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 animations {
-    enabled = yes
+    enabled = true
     bezier = custom, 0.45, 0.05, 0.55, 0.95
-    animation = windowsIn,   1, 1.8, default
-    animation = windowsOut,  1, 1.8, default
-    animation = windowsMove, 1, 1.8, default
-    animation = fade,        1, 1.8, default
-    animation = workspaces,  1, 1.8, default
-    animation = border,      1, 1.8, default
-    animation = borderangle, 1, 1.8, default
+    animation = windowsIn,   1, 5, default
+    animation = windowsOut,  1, 8, default, popin 80%
+    animation = windowsMove, 1, 5, default
+    animation = fade,        1, 5, default
+    animation = workspaces,  1, 5, default
+    animation = border,      1, 5, default
+    animation = borderangle, 1, 5, default
+
+    # bezier = hyprBezier, 0.05, 0.9, 0.1, 1.05
+
+    # animation = windows,     1, 5, hyprBezier
+    # animation = windowsOut,  1, 5, default, popin 80%
+    # animation = border,      1, 5, default
+    # animation = borderangle, 1, 5, default
+    # animation = fade,        1, 5, default
+    # animation = workspaces,  1, 5, default
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -55,6 +64,9 @@ dwindle {
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+workspace = 8, layoutopt:orientation:top
+workspace = 9, layoutopt:orientation:top
 master {
-    new_is_master = true
+    allow_small_split = true
+    new_is_master = false
 }
