--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -6,10 +6,8 @@ set -sg escape-time 10
 
 setw -g mode-keys vi
 
-unbind %
-bind v split-window -h
-unbind '"'
-bind h split-window -v
+bind % split-window -h
+bind '"' split-window -v
 
 bind -n M-h resize-pane -L 5
 bind -n M-j resize-pane -D 5
