--- a/config/fastfetch/config.jsonc
+++ b/config/fastfetch/config.jsonc
@@ -1,37 +1,37 @@
 {
-  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-  "modules": [
-    "title",
-    "separator",
-    "os",
-    //"host",
-    "kernel",
-    "packages",
-    "shell",
-    "terminal",
-    "de",
-    "break",
-    //"wm",
-    //"wmtheme",
-    //"theme",
-    //"icons",
-    //"font",
-    //"cursor",
-    //"localip",
-    //"terminalfont",
-    "cpu",
-    "gpu",
-    "memory",
-    "swap",
-    "disk",
-    "display",
-    "break",
-    "uptime",
-    "break",
-    //"battery",
-    //"poweradapter",
-    //"locale",
-    //"break",
-    //"colors"
-  ]
+    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+    "modules": [
+        //"separator",
+        "os",
+        //"host",
+        "kernel",
+        "packages",
+        "break",
+        "shell",
+        "terminal",
+        "wm",
+        "break",
+        //"wmtheme",
+        //"theme",
+        //"icons",
+        //"font",
+        //"cursor",
+        //"localip",
+        //"terminalfont",
+        "cpu",
+        "gpu",
+        "memory",
+        "swap",
+        "disk",
+        "break",
+        "uptime",
+        "break",
+        //"display",
+        //"break",
+        //"battery",
+        //"poweradapter",
+        //"locale",
+        //"break",
+        "colors"
+    ]
 }
