--- a/config/tofi/config
+++ b/config/tofi/config
@@ -12,6 +12,9 @@ min-input-width = 120
 result-spacing = 20
 background-color = #000000
 
+terminal = tofi
+fuzzy-match = true
+
 padding-top = 0
 padding-bottom = 0
 padding-left = 0
@@ -20,6 +23,4 @@ padding-right = 0
 input-color = #fefefe
 default-result-color = #9e9e9e
 selection-background= #7571AD
-selection-color = #000000
-
-selection-match-color = #fefefe
+selection-color = #fefefe
