--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,8 +1,7 @@
-source = ./hyprland/envoirment.conf
-source = ./hyprland/config.conf
+source = ~/.config/hypr/hyprland/envoirment.conf
+source = ~/.config/hypr/hyprland/config.conf
 
-source = ./hypr/hyprland/displays.conf
-# source = ~/.config/hypr/workspaces.conf
+source = ~/.config/hypr/hyprland/displays.conf
 source = ~/.config/hypr/hyprland/keybinds.conf
 source = ~/.config/hypr/hyprland/theme.conf
 source = ~/.config/hypr/hyprland/devices.conf
