--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -10,9 +10,8 @@ $terminal = foot
 $runner = tofi-drun --drun-launch=true
 $browser = flatpak run org.mozilla.firefox
 $fileManager = $terminal -e lf
-#$screenshot = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG
-$ss_region = grim -g "$(slurp)" - | swappy -f -
-$ss_screen = grim -g "$(slurp -o)" - | swappy -f -
+$ss_region = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG
+$ss_screen = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -o -d)" $IMG && wl-copy < $IMG
 
 $mod  = SUPER
 $mods = SUPER_SHIFT
@@ -64,6 +63,11 @@ bind = $mod,  Tab, fullscreen, 1
 bind = $modc, R, exec, killall waybar && waybar
 bind = ALT, Tab, cyclenext,
 bind = ALT, Tab, bringactivetotop,
+
+$WOBSOCK = /run/user/1000/wob.sock
+binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+ > $WOBSOCK
+binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%- > $WOBSOCK
+bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 # Move focus with mod + vim motions
 bind = $mod, h, movefocus, l
