--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -11,6 +11,7 @@
         "hyprland/window"
     ],
     "modules-right": [
+        "battery",
         "hyprland/language",
         "clock#date",
         "clock#time",
