--- a/config/hypr-laptop/hyprland.conf
+++ b/config/hypr-laptop/hyprland.conf
@@ -1,6 +1,10 @@
 source = ~/.config/hypr/hyprland/envoirment.conf
 source = ~/.config/hypr/hyprland/config.conf
 
+input {
+    kb_options = caps:swapescape
+}
+
 source = ~/.config/hypr/hyprland/displays-laptop.conf
 source = ~/.config/hypr/hyprland/keybinds.conf
 source = ~/.config/hypr/hyprland/theme.conf
