--- a/config/hypr/hyprland/config.conf
+++ b/config/hypr/hyprland/config.conf
@@ -23,7 +23,7 @@ misc {
     new_window_takes_over_fullscreen = 1
     animate_manual_resizes = true
     no_direct_scanout = false
-#    vfr = true
+    vfr = true
     vrr = 1
     initial_workspace_tracking = 2
 }
