--- a/config/hypr/hyprland/devices.conf
+++ b/config/hypr/hyprland/devices.conf
@@ -17,8 +17,9 @@ input {
 
     touchpad {
         disable_while_typing = true
-        natural_scroll = false
+        natural_scroll = true
         tap-to-click = true
+        scroll_factor = 0.5
     }
 
     sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
