--- a/config/hypr-laptop/hyprland.conf
+++ b/config/hypr-laptop/hyprland.conf
@@ -1,9 +1,7 @@
 source = ~/.config/hypr/hyprland/envoirment.conf
 source = ~/.config/hypr/hyprland/config.conf
 
-input {
-    kb_options = caps:swapescape
-}
+env = WLR_DRM_DEVICES,$HOME/.config/hypr/card
 
 source = ~/.config/hypr/hyprland/displays-laptop.conf
 source = ~/.config/hypr/hyprland/keybinds.conf
