--- a/config/hypr/hyprland/devices.conf
+++ b/config/hypr/hyprland/devices.conf
@@ -3,6 +3,7 @@ input {
     # keyboard
     kb_layout = us,es
     kb_options = grp:win_space_toggle
+    kb_options = caps:swapescape
     kb_variant =
     kb_model =
     kb_rules =
