--- a/config/foot-laptop/foot.ini
+++ b/config/foot-laptop/foot.ini
@@ -8,10 +8,10 @@
 # title=foot
 # locked-title=no
 
-font=SF Mono Powerline:size=12:style=Medium
-font-bold=SF Mono Powerline:size=12:style=Semibold
-font-italic=SF Mono Powerline:size=12:style=Medium Italic
-font-bold-italic=SF Mono Powerline:size=12:style=Semibold Italic
+font=SF Mono Powerline:size=11:style=Medium
+font-bold=SF Mono Powerline:size=11:style=Semibold
+font-italic=SF Mono Powerline:size=11:style=Medium Italic
+font-bold-italic=SF Mono Powerline:size=11:style=Semibold Italic
 font-size-adjustment=0.5
 line-height=15
 # letter-spacing=0
@@ -26,7 +26,7 @@ dpi-aware=no
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
-pad=8x4                             # optionally append 'center'
+pad=4x4 center       # optionally append 'center'
 # resize-delay-ms=100
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
