--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -9,6 +9,5 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
 exec-once = otd-daemon
-
-$WOBSOCK = /run/user/1000/wob.sock
-exec = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
+exec-once = mkfifo /tmp/wobpipe
+exec-once = tail -f /tmp/wobpipe | wob
