--- a/config/hypr/hyprland/devices.conf
+++ b/config/hypr/hyprland/devices.conf
@@ -3,7 +3,6 @@ input {
     # keyboard
     kb_layout = us,es
     kb_options = grp:win_space_toggle
-#    kb_options = caps:swapescape
     kb_variant =
     kb_model =
     kb_rules =
@@ -35,6 +34,11 @@ input {
     #     relative_input = false
     #     left_handed = false
     # }
+}
+
+device {
+    name = at-translated-set-2-keyboard
+    kb_options = caps:swapescape
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
