--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,15 +1,50 @@
-general {
-    ignore_empty_input = true
-    background {
-        monitor =
-        path = /home/m4rti/dotfiles/wallpapers/cat_juzo.png # supports png, jpg, webp (no animations, though)
-        color = rgba(25, 20, 20, 1.0)
-        blur_passes = 0 # 0 disables blurring
-        blur_size = 7
-        noise = 0.0117
-        contrast = 0.8916
-        brightness = 0.8172
-        vibrancy = 0.1696
-        vibrancy_darkness = 0.0
-    }
+$bg = rgba(1E1E1EFF)
+$fg = rgba(FEFEFEFF)
+$fg2 = rgba(9E9E9EFF)
+$ac = rgba(7571ADFF)
+$ds = rgba(303030FF)
+
+$black = rgba(000000ff)
+$danger = rgba(ED333BFF)
+$success = rgba(33D17AFF)
+$warning = rgba(F8E45CFF)
+$info = rgba(3584E4FF)
+
+background {
+    path = /home/m4rti/dotfiles/wallpapers/current
+    color = $bg
+}
+
+input-field {
+    monitor =
+    size = 250, 40
+    outline_thickness = 1
+    dots_size = 0.1
+    dots_spacing = 0.3
+    fade_on_empty = false
+    hide_input = false
+    placeholder_text = 
+    outer_color = $ac
+    inner_color = $bg
+    font_color = $fg
+    check_color = $success
+    fail_color = $danger
+
+    rounding = 0
+
+    position = 0, 20
+    halign = center
+    valign = center
+}
+
+label { # Clock
+    monitor =
+    text = $TIME
+    shadow_passes = 0
+    color = $fg
+    font_size = 65
+
+    position = 0, 300
+    halign = center
+    valign = center
 }
