--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -1,11 +1,9 @@
-exec-once = wl-gammarelay-rs
 exec-once = hyprpaper
-# exec-once = waypaper --restore
 exec-once = waybar
-# exec-once = pypr
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
-exec-once = udiskie &
+exec-once = udiskie
+exec-once = wl-gammarelay-rs
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
