--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -21,18 +21,19 @@ input-field {
     outline_thickness = 1
     dots_size = 0.1
     dots_spacing = 0.3
-    fade_on_empty = false
+    fade_on_empty = true
     hide_input = false
     placeholder_text = 
-    outer_color = $ac
+    outer_color = $ds
     inner_color = $bg
     font_color = $fg
+    font_family = SF Mono Powerline
     check_color = $success
     fail_color = $danger
 
-    rounding = 0
+    rounding = 8
 
-    position = 0, 20
+    position = 0, 0
     halign = center
     valign = center
 }
@@ -42,9 +43,10 @@ label { # Clock
     text = $TIME
     shadow_passes = 0
     color = $fg
-    font_size = 65
+    font_size = 120
+    font_family = SF Pro Display
 
-    position = 0, 300
-    halign = center
-    valign = center
+    position = 140, -80
+    halign = left
+    valign = top
 }
