--- a/config/hypr/hyprland/autostart.conf
+++ b/config/hypr/hyprland/autostart.conf
@@ -2,11 +2,11 @@ exec-once = hyprpaper
 exec-once = waybar
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
-exec-once = udiskie
+exec-once = udiskie -s
 exec-once = wl-gammarelay-rs
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" 
-exec-once = otd-daemon
 exec-once = mkfifo /tmp/wobpipe
 exec-once = tail -f /tmp/wobpipe | wob
+exec-once = otd-daemon
