--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -38,6 +38,7 @@ windowrulev2 = workspace 9 silent,class:^(whatsapp-desktop-linux)$
 ## Games
 windowrulev2 = workspace 4,class:^(osu!.exe)$
 windowrulev2 = workspace 4,class:^(factorio)$
+windowrulev2 = workspace 4,class:^(steam_app_*)$
 
 ## Game Launchers
 windowrulev2 = workspace 5 silent,class:^(steam)$
