--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -9,9 +9,9 @@
 # locked-title=no
 
 font=SF Mono Powerline:size=13:style=Medium
-font-bold=SF Mono Powerline:size=13:style=Semibold
-font-italic=SF Mono Powerline:size=13:style=Medium Italic
-font-bold-italic=SF Mono Powerline:size=13:style=Semibold Italic
+font-bold=SF Mono Powerline:size=13:style=Bold
+font-italic=SF Mono Powerline:size=13:style=Italic
+font-bold-italic=SF Mono Powerline:size=13:style=Bold Italic
 font-size-adjustment=0.5
 line-height=15
 # letter-spacing=0
