--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -25,8 +25,14 @@ windowrulev2 = noblur,class:^(org.freedesktop.Xwayland)$
 windowrulev2 = opaque,class:^(org.freedesktop.Xwayland)$
 
 # osu!
+windowrulev2 = dimaround,class:^(osu!.exe)$
 windowrulev2 = noanim,class:^(osu!.exe)$
 windowrulev2 = noblur,class:^(osu!.exe)$
+windowrulev2 = float,class:^(osu!.exe)$
+windowrulev2 = center,class:^(osu!.exe)$
+windowrulev2 = size 1920 1079,class:^(osu!.exe)$
+windowrulev2 = forceinput,class:^(osu!.exe)$
+windowrulev2 = suppressevent,class:^(osu!.exe)$
 windowrulev2 = opaque,class:^(osu!.exe)$
 windowrulev2 = bordercolor rgb(000000),class:^(osu!.exe)$
 
