--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -27,17 +27,17 @@ set -g pane-border-style "fg=black"
 set -g pane-active-border-style "fg=red"
 set -g status-style "bg=black fg=#080808"
 set -g status-left-style "bg=green fg=#080808"
-set -g status-right-style "bg=red fg=#080808"
+set -g status-right-style "bg=yellow fg=#080808"
 
 # These are the default values used inside the plugin to acheive the preview shown above.
 set -g @minimal-tmux-bg "blue"
 set -g @minimal-tmux-justify "left"
 # set -g @minimal-tmux-indicator-str ""
-set -g @minimal-tmux-indicator false
+set -g @minimal-tmux-indicator true
 set -g @minimal-tmux-status "top"
 
 # Enables or disables the left and right status bar
-set -g @minimal-tmux-right false
+set -g @minimal-tmux-right true
 set -g @minimal-tmux-left true
 
 #on all tabs (default is false)
@@ -47,6 +47,6 @@ set -g @minimal-tmux-show-expanded-icons-for-all-tabs true
 # Not recommended to change these values
 set -g @minimal-tmux-status-left "  #S "
 # clock on the right
-set -g @minimal-tmux-status-right " %R %d %b %Y "
+set -g @minimal-tmux-status-right " %R "
 
 run '~/.config/tmux/plugins/tpm/tpm'
