--- a/config/tofi/config
+++ b/config/tofi/config
@@ -1,10 +1,10 @@
 anchor = bottom
 width = 100%
-height = 13
+height = 17
 horizontal = true
 prompt-text = "  "
-font = "SF Pro Bold"
-font-size = 8
+font = "Torus SemiBold"
+font-size = 9
 hint-font = true
 outline-width = 0
 border-width = 0
