--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,7 +1,7 @@
-font=SF Mono Powerline:size=13:style=Medium
-font-bold=SF Mono Powerline:size=13:style=Bold
-font-italic=SF Mono Powerline:size=13:style=Italic
-font-bold-italic=SF Mono Powerline:size=13:style=Bold Italic
+font=Maple Mono NF:size=13:style=Medium
+font-bold=Maple Mono NF:size=13:style=Bold
+font-italic=Maple Mono NF:size=13:style=Italic
+font-bold-italic=Maple Mono NF:size=13:style=Bold Italic
 font-size-adjustment=0.5
 line-height=15
 box-drawings-uses-font-glyphs=no
