--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -52,12 +52,13 @@ $hyprscripts= ~/.config/hypr/scripts
 bind = $mod, V, exec, $hyprscripts/scratchpads.sh volume
 bind = $mod, P, exec, $hyprscripts/scratchpads.sh password
 bind = $mod, M, exec, $hyprscripts/scratchpads.sh music
+bind = $mod, G, exec, $hyprscripts/scratchpads.sh launchers
 
 # Actions
 bind = $modc, Q, exec, wlogout
 bind = $mod,  W, killactive,
 bind = $mod,  T, togglefloating, 
-bind = $mod,  G, pseudo,
+bind = $mod,  Y, pseudo,
 bind = $mod,  F, fullscreen
 bind = $mod,  Tab, fullscreen, 1 
 bind = $modc, R, exec, killall waybar && waybar
