--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -38,21 +38,18 @@ windowrulev2 = bordercolor rgb(000000),class:^(osu!.exe)$
 
 ## Default workspace for applications
 ## Chat Apps
-windowrulev2 = workspace 8 silent,class:^(vesktop)$
-windowrulev2 = workspace 9 silent,class:^(whatsapp-desktop-linux)$
+windowrulev2 = workspace 8 silent,class:(vesktop)
+windowrulev2 = workspace 9 silent,class:(whatsapp-desktop-linux)
 
 ## Games
-windowrulev2 = workspace 4,class:^(osu!.exe)$
-windowrulev2 = workspace 4,class:^(factorio)$
-windowrulev2 = workspace 4,class:steam_app_*
+windowrulev2 = workspace 5,class:(osu!.exe)
+windowrulev2 = workspace 5,class:(osu!)
+windowrulev2 = workspace 5,class:(factorio)
+windowrulev2 = workspace 5,class:(steam_app_*)
 
 ## Game Launchers
-windowrulev2 = workspace 5 silent,class:^(steam)$
-windowrulev2 = workspace 5 silent,class:^(com.heroicgameslauncher.hgl)$
-windowrulev2 = workspace 5 silent,class:^(lutris)$
-
+windowrulev2 = workspace 7 silent,class:^(steam)$
+windowrulev2 = workspace 7 silent,class:^(com.heroicgameslauncher.hgl)$
 ## OBS
-windowrulev2 = workspace 7,class:^(com.obsproject.Studio)$
+windowrulev2 = workspace 6,class:^(com.obsproject.Studio)$
 
-# exec-once = flatpak run dev.vencord.Vesktop
-# exec-once = flatpak run io.github.mimbrero.WhatsAppDesktop
