--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -10,7 +10,7 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgb(9676C5)
+    col.active_border = rgb(a46c3c)
     col.inactive_border = rgba(303030ff) # gray
 }
 
