--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -15,7 +15,7 @@ bind -n M-k resize-pane -U 5
 bind -n M-l resize-pane -R 5
 
 # bind Ctrl + F to run a script
-bind-key -r f run-shell "tmux neww ~/dotfiles/scripts/tmux-sessionizer.sh"
+bind-key -r f run-shell "tmux neww tmux-sessionizer"
 
 set -g @plugin 'tmux-plugins/tpm'
 
@@ -29,7 +29,7 @@ set -g status-style "bg=black fg=#080808"
 set -g status-left-style "bg=green fg=#080808"
 set -g status-right-style "bg=yellow fg=#080808"
 
-# These are the default values used inside the plugin to acheive the preview shown above.
+# These are the default values used inside the plugin to achieve the preview shown above.
 set -g @minimal-tmux-bg "blue"
 set -g @minimal-tmux-justify "left"
 # set -g @minimal-tmux-indicator-str ""
