--- a/config/tofi/config
+++ b/config/tofi/config
@@ -22,5 +22,5 @@ padding-right = 0
 
 input-color = #fefefe
 default-result-color = #9e9e9e
-selection-background = #9676C5
+selection-background = #a46c3c
 selection-color = #fefefe
