--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -9,8 +9,8 @@ windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 50% 60%,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float,class:^(Bitwarden)$
 windowrulev2 = size 50% 60%,class:^(Bitwarden)$
-windowrulev2 = float,class:^(Spotify)$
-windowrulev2 = size 50% 60%,class:^(Spotify)$
+windowrulev2 = float,class:(Spotify)
+windowrulev2 = size 50% 60%,class:(Spotify)
 
 # Floating
 windowrulev2 = float,title:^(Confirm File Replacing)$
