--- a/config/tofi/config
+++ b/config/tofi/config
@@ -24,3 +24,6 @@ input-color = #fefefe
 default-result-color = #9e9e9e
 selection-background = #a46c3c
 selection-color = #fefefe
+selection-background-padding = 4, 4
+input-background-padding = 4, 4
+alternate-result-background-padding = 4, 4
